--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -1,3 +1,30 @@
-/* for troubleshooting only!! */
-/* body { background-color: tan;}
-img { max-width: 600px; } */
+* { box-sizing: border-box; }
+
+a:hover { cursor: pointer; }
+
+/* img { max-width: 100%; } */
+
+body {
+  margin: 0;
+  font-family: sans-serif;
+  background-color: grey; /* VORPAL - remove after testing! */
+}
+
+nav ul li,
+footer ul li {
+  list-style: none;
+  display: inline-block;
+}
+
+nav a,
+footer a { text-decoration: none; }
+
+img[src*="images/cart-icon.svg"] { height: 2rem; } /* HATTER - use FA here? */
+img[src*="images/adoptadog-logo.svg"] { width: 25%; }
+
+header {
+  background-image: url("../images/header-image.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: 100% 0%;
+}
