--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -1,3 +1,5 @@
+/* I didn't know what to add to make it more responsive than my first draft. */
+
 * { box-sizing: border-box; }
 
 a:hover { cursor: pointer; }
