--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -1,8 +1,8 @@
-/* I didn't know what to add to make it more responsive than my first draft. */
-
 * { box-sizing: border-box; }
 
 a:hover { cursor: pointer; }
+
+img { max-width: 100%; }
 
 .clearfix::after {
  content: "";
@@ -59,14 +59,16 @@ img[src*="images/adoptadog-logo.svg"] { width: 25%; }
 
 button {
   background-color: #81B741; /* lime green */
+  color: #ECECEC; /* very light cream */
   border: none;
   text-decoration: none;
   padding: 0.5rem;
+  font-weight: bold;
 }
 
 header {
   background-image: url("../images/header-image.jpg");
-  background-color: #0B0B0B; /* VORPAL - needed for large resolutions? */
+  background-color: #0B0B0B;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: 100% 0%;
@@ -84,11 +86,17 @@ img[src="images/adoptadog-logo.svg"] { margin: 3.5rem 1.5rem 0 5.5rem; }
 
 main { margin: 3rem 10%; }
 
+.sidebar a {
+  text-decoration: none;
+  color: #239AB9; /* pale blue */
+}
+
 .story { margin: 1.5rem auto 3rem auto;}
 
+/* WHITE RABBIT - I can't get this to crop/fill like the pdf... */
 .story img {
-  float: left;
-  padding-right: 5rem;
+  /* float: left;
+  padding-right: 5rem; */
 }
 
 .flex-wrapper {
@@ -97,8 +105,18 @@ main { margin: 3rem 10%; }
   justify-content: space-between;
 }
 
+.main-content { width: 70%; }
+.sidebar { width: 25%; }
+
+.see-more { /* HATTER - This is so inelegant... */
+  background-color: #ECECEC; /* very light cream */
+  color: #093C60; /* very dark blue */
+  width: 20%;
+  margin-left: 40%;
+}
+
 .card {
-  width: calc(100% * (1/4) - 2.5%);
+  width: calc(100% * (1/3) - 2.5%);
   margin-bottom: 2.5rem;
   border: 2px solid #ECECEC; /* very light cream */
 }
@@ -160,3 +178,16 @@ footer {
 }
 
 footer a { color: inherit; }
+
+/* Tablet */
+@media screen and (max-width: 768px) {
+  .card { width: calc(100% * (1/2) - 2.5%); }
+}
+
+/* Phone */
+@media screen and (max-width: 576px) {
+  .card { width: 100%; }
+
+  .main-content { width: 100%; }
+  .sidebar { display: none; }
+}
