--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -4,6 +4,12 @@ a:hover { cursor: pointer; }
 
 img { max-width: 100%; }
 
+button a {
+  width: 100%;
+  text-decoration: none;
+  text-align: center;
+}
+
 .clearfix::after {
  content: "";
  clear: both;
@@ -110,10 +116,11 @@ main { margin: 3rem 10%; }
 
 .see-more { /* HATTER - This is so inelegant... */
   background-color: #ECECEC; /* very light cream */
-  color: #093C60; /* very dark blue */
-  width: 20%;
-  margin-left: 40%;
+  width: 30%;
+  margin-left: 35%;
 }
+
+.see-more a { color: #093C60; /* very dark blue */ }
 
 .card {
   width: calc(100% * (1/3) - 2.5%);
@@ -179,6 +186,8 @@ footer {
 
 footer a { color: inherit; }
 
+.mobile { display: none; }
+
 /* Tablet */
 @media screen and (max-width: 768px) {
   .card { width: calc(100% * (1/2) - 2.5%); }
@@ -190,4 +199,16 @@ footer a { color: inherit; }
 
   .main-content { width: 100%; }
   .sidebar { display: none; }
+  .mobile { display: inherit; }
+
+  button.mobile {
+    width: 40%;
+    margin-left: 30%;
+    margin-top: 2.5rem;
+  }
+
+  button.mobile > a {
+    color: #ECECEC; /* very light cream */
+    display: inline-block;
+  }
 }
